temperature-yamls/temperature-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: backend
  name: backend
  namespace: temperature
spec:
  containers:
  - name: backend
    image: eatmygunzoldier/temperature:v9
    resources:
      limits:
        cpu: 200m
        memory: 64Mi
      requests:
        cpu: 100m
        memory: 64Mi
  restartPolicy: Always
