temperature-yamls/temperature-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: temperature
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: 5000
